MongoDB_Clg.txt
use db1

db.students.insertOne({"name":"Deepanshu"});

db.students.insertOne({"name":"Bhupandra"});

db.students.find();

db.students.insertMany({"Name":"Aman","Subject":"DT"},{"Name":"Abrish","Subject":"DBMS"});

db.teacher.insertOne({"Name":"Preeti Mam","Subject":"DBMS","Course":"MCA","Sec":"B"});

db.students.find();

***************************************************************************
			IN MONGODB SHELL
	
	
Please enter a MongoDB connection string (Default: mongodb://localhost/): mongodb://localhost/
mongodb://localhost/
Current Mongosh Log ID: 66617790721a44ccffcdcdf5
Connecting to:          mongodb://localhost/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.2.6
Using MongoDB:          7.0.11
Using Mongosh:          2.2.6

For mongosh info see: https://docs.mongodb.com/mongodb-shell/


To help improve our products, anonymous usage data is collected and sent to MongoDB periodically (https://www.mongodb.com/legal/privacy-policy).
You can opt-out by running the disableTelemetry() command.

------
   The server generated these startup warnings when booting
   2024-06-06T11:25:03.532+05:30: Access control is not enabled for the database. Read and write access to data and configuration is unrestricted
------

test> use db1;
switched to db db1
db1> db.student.insertOne({"Name":"Deepanshu","Course":"MCA"});
{
  acknowledged: true,
  insertedId: ObjectId('666177c8721a44ccffcdcdf6')
}
db1> db.students.insertMany([{"Name":"Bhupandra","Course":"B.Tech"},{"Name":"Aman","Course":"M.Tech"},{"Name":"Ambrish","Course":
...
... /
Uncaught:
SyntaxError: Unterminated regular expression. (3:1)

  1 | db.students.insertMany([{"Name":"Bhupandra","Course":"B.Tech"},{"Name":"Aman","Course":"M.Tech"},{"Name":"Ambrish","Course":
  2 |
> 3 | /
    |  ^
  4 |

db1> db.students.insertMany([{"Name":"Bhupandra","Course":"B.Tech"},{"Name":"Aman","Course":"M.Tech"},{"Name":"Ambrish","Course":"MCA"}]);
{
  acknowledged: true,
  insertedIds: {
    '0': ObjectId('66617861721a44ccffcdcdf7'),
    '1': ObjectId('66617861721a44ccffcdcdf8'),
    '2': ObjectId('66617861721a44ccffcdcdf9')
  }
}
db1> db.students.find();
[
  {
    _id: ObjectId('66617861721a44ccffcdcdf7'),
    Name: 'Bhupandra',
    Course: 'B.Tech'
  },
  {
    _id: ObjectId('66617861721a44ccffcdcdf8'),
    Name: 'Aman',
    Course: 'M.Tech'
  },
  {
    _id: ObjectId('66617861721a44ccffcdcdf9'),
    Name: 'Ambrish',
    Course: 'MCA'
  }
]
db1> db.students.findOne();
{
  _id: ObjectId('66617861721a44ccffcdcdf7'),
  Name: 'Bhupandra',
  Course: 'B.Tech'
}
db1>